# bootcamp_engenharia_de_dados_2024

./: README.md  exercicios.py
aula/aula_01/: desafio.py  exercicios.py
aula/aula_02/: desafio.py  exercicios.py  typeerror.py
aula/aula_03/: desafio.py  exercicios.py  testes.py
aula/aula_04/: Exercicios_inter_avancados.py  desafio.py  exemplo_ler_arquivo.py  exemplos_dict.py  exemplos_lista.py  exercicios.py  exercicios_basicos.py  exercicios_funcao.py  teste.py  testes.py
aula/aula_05/: README.md
aula/aula_06/: .flake8  main.py  pyproject.toml
aula/aula_07/: exemplo_funcao.py  exercicios.py  explicação_funcao.txt  teste.py
aula_02/: exercicios.py
